@@ -2024,6 +2024,9 @@ Please confirm that really want to recreate this article.',
 # DISPLAYTITLE
 'displaytitle' => '(Link to this page as [[$1]])',
 
+# Separator for categories in page lists
+'catseparator' => '|',
+
 );
 
 
